RESOLVED FIXED228033
REGRESSION (r277820): Can't scroll up and down using trackpad in Mail message viewer when in Slide Over
https://bugs.webkit.org/show_bug.cgi?id=228033
Summary REGRESSION (r277820): Can't scroll up and down using trackpad in Mail message...
Wenson Hsieh
Reported 2021-07-16 13:30:37 PDT
Attachments
Patch (5.46 KB, patch)
2021-07-16 13:54 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2021-07-16 13:54:21 PDT
Wenson Hsieh
Comment 2 2021-07-16 16:15:29 PDT
Comment on attachment 433699 [details] Patch Thanks for the review!
EWS
Comment 3 2021-07-16 16:22:34 PDT
Committed r280006 (239748@main): <https://commits.webkit.org/239748@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 433699 [details].
Note You need to log in before you can comment on or make changes to this bug.